Implemented login functionality

--- a/html_form/templates/signup.html
+++ b/html_form/templates/signup.html
@@ -15,8 +15,9 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="main">Home</a></li>
-            <li role="presentation"><a href="#">Sign In</a></li>
+            <!-- Shoudn't this redirect to home? -->
+            <li role="presentation" ><a href="/">Home</a></li>
+            <li role="presentation"><a href="showSignin">Sign In</a></li>
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
         </nav>
@@ -35,8 +36,6 @@
           <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
         </form>
       </div>
-
-
 
       <footer class="footer">
         <p>&copy; Company 2015</p>
