--- a/html_form/templates/signin.html
+++ b/html_form/templates/signin.html
@@ -30,13 +30,12 @@
         <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-
         <button id="btnSignIn" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
       </div>
 
       <footer class="footer">
-        <p>&copy; Company 2015</p>
+        <p>&copy; MyStartUp 2016</p>
       </footer>
 
     </div>
