--- a/html_form/templates/signup.html
+++ b/html_form/templates/signup.html
@@ -4,7 +4,6 @@
     <title>Python Flask Bucket List App</title>
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
-    <!-- <link href="../static/signup.css" rel="stylesheet"> -->
     <script src="../static/js/jquery-3.1.1.js"></script>
     <script src="../static/js/signUp.js"></script>
   </head>
@@ -15,7 +14,6 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <!-- Shoudn't this redirect to home? -->
             <li role="presentation" ><a href="/">Home</a></li>
             <li role="presentation"><a href="showSignin">Sign In</a></li>
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
@@ -26,21 +24,20 @@
 
       <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form class="form-signin">
+        <form action="/" class="form-signin">
           <label for="inputName" class="sr-only">Name</label>
           <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-          <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
+          <!-- Can we redirect this somewhere else? -->
+          <button onclick="location.href = '/';" id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
         </form>
       </div>
-
       <footer class="footer">
-        <p>&copy; Company 2015</p>
+        <p>&copy; MyStartup 2016</p>
       </footer>
-
     </div>
   </body>
 </html>
