--- a/html_form/templates/error.html
+++ b/html_form/templates/error.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
       <title>Unauthorized Access:: Python Flask Bucket List App</title>
-      <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-      <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+      <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
   </head>
   <body>
       <div class="container">
