--- a/html_form/templates/signin.html
+++ b/html_form/templates/signin.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <title>Python Flask Bucket List App</title>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/jumbotron-narrow.css" rel="stylesheet">
     <link href="../static/css/signup.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.js"></script>
   </head>
