--- a/html_form/templates/userHome.html
+++ b/html_form/templates/userHome.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Python Flask Bucket List App</title>
-      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-      <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
-      <link href="../static/css/signup.css" rel="stylesheet">
+    <title>Python Flask Bucket List App</title>
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="../static/css/signup.css" rel="stylesheet">
+    <script src="../static/js/jquery-3.1.1.js"></script>
+    <script>
+      $(function() {
+          console.log('No problem ssssso far')
+          $.ajax({
+              url: '/getWish',
+              type: 'GET',
+              success: function(res) {
+                  console.log('No problem so far')
+                  var div = $('<div>')
+                      .attr('class', 'list-group')
+                      .append($('<a>')
+                          .attr('class', 'list-group-item active')
+                          .append($('<h4>')
+                              .attr('class', 'list-group-item-heading'),
+                              $('<p>')
+                              .attr('class', 'list-group-item-text')));
+                  console.log('How about here?')
+                  var wishObj = JSON.parse(res);
+                  var wish = '';
+                  $.each(wishObj, function(index, value) {
+                      wish = $(div).clone();
+                      $(wish).find('h4').text(value.Title);
+                      $(wish).find('p').text(value.Description);
+                      $('.jumbotron').append(wish);
+                  });
+                  console.log(res);
+              },
+              error: function(error) {
+                  console.log(error);
+              }
+          });
+      });
+    </script>
   </head>
 
   <body>
@@ -12,7 +46,11 @@
           <div class="header">
               <nav>
                   <ul class="nav nav-pills pull-right">
-                      <li role="presentation" class="active"><a href="/logout">Logout</a>
+                      <li role="presentation" class="active">
+                        <a href="/logout">Logout</a>
+                      </li>
+                      <li role="presentation">
+                        <a href="/showAddWish">Add Wish</a>
                       </li>
                   </ul>
               </nav>
@@ -20,9 +58,15 @@
           </div>
           <div class="jumbotron">
               <h1>Welcome Home !!</h1>
+              <div class="list-group">
+                <a href="#" class="list-group-item active">
+                  <h4 class="list-group-item-heading">Wish Title</h4>
+                  <p class="list-group-item-text">Wish Description</p>
+                </a>
+              </div>
           </div>
           <footer class="footer">
-              <p>&copy; Company 2015</p>
+              <p>&copy; MyStartup 2016</p>
           </footer>
       </div>
   </body>
