--- a/html_form/templates/userHome.html
+++ b/html_form/templates/userHome.html
@@ -8,12 +8,10 @@
     <script src="../static/js/jquery-3.1.1.js"></script>
     <script>
       $(function() {
-          console.log('No problem ssssso far')
           $.ajax({
               url: '/getWish',
               type: 'GET',
               success: function(res) {
-                  console.log('No problem so far')
                   var div = $('<div>')
                       .attr('class', 'list-group')
                       .append($('<a>')
@@ -22,15 +20,18 @@
                               .attr('class', 'list-group-item-heading'),
                               $('<p>')
                               .attr('class', 'list-group-item-text')));
-                  console.log('How about here?')
                   var wishObj = JSON.parse(res);
+                  console.log(wishObj[0]); // debugging
+                  console.log('here i am');
                   var wish = '';
                   $.each(wishObj, function(index, value) {
                       wish = $(div).clone();
+                      console.log(wish);  // for debugging
                       $(wish).find('h4').text(value.Title);
                       $(wish).find('p').text(value.Description);
                       $('.jumbotron').append(wish);
                   });
+                  console.log(wish);  // for debugging
                   console.log(res);
               },
               error: function(error) {
@@ -58,12 +59,12 @@
           </div>
           <div class="jumbotron">
               <h1>Welcome Home !!</h1>
-              <div class="list-group">
-                <a href="#" class="list-group-item active">
+              <!-- <div class="list-group"> -->
+                <!-- <a href="#" class="list-group-item active">
                   <h4 class="list-group-item-heading">Wish Title</h4>
                   <p class="list-group-item-text">Wish Description</p>
-                </a>
-              </div>
+                </a> -->
+              <!-- </div> -->
           </div>
           <footer class="footer">
               <p>&copy; MyStartup 2016</p>
