--- a/html_form/templates/addWish.html
+++ b/html_form/templates/addWish.html
@@ -5,6 +5,12 @@
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.js"></script>
+    <script type="text/javascript">
+      // to initially hide span 
+      $(document).ready(function() {
+        $("#invemail").hide();
+      });
+    </script>
   </head>
 
   <body>
