--- a/html_form/templates/signup.html
+++ b/html_form/templates/signup.html
@@ -28,7 +28,7 @@
           <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <span id="invemail" style="display: none;">
+          <span id="invemail">
             Sorry, but it seems like you've entered an invalid email address
           </span>
           <label for="inputPassword" class="sr-only">Password</label>
