--- a/html_form/templates/signup.html
+++ b/html_form/templates/signup.html
@@ -6,12 +6,6 @@
     <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.js"></script>
     <script src="../static/js/signUp.js"></script>
-    <script type="text/javascript">
-      // to initially hide span
-      j$(document).ready(function() {
-        j$("#invemail").hide();
-      });
-    </script>
   </head>
 
   <body>
@@ -29,17 +23,19 @@
 
       <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form action="/" class="form-signin">
+        <form class="form-signin" method="POST" id="signupForm">
           <label for="inputName" class="sr-only">Name</label>
           <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <span id="invemail">
+          <span id="invEmail">
             Sorry, but it seems like you've entered an invalid email address
+          </span>
+          <span id="existEmail">
+            Sorry, but it seems that this account already exists.
           </span>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-          <!-- Can we redirect this somewhere else? -->
           <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button" style="margin-top: 15px;">Sign up</button>
         </form>
       </div>
