--- a/html_form/templates/addWish.html
+++ b/html_form/templates/addWish.html
@@ -12,10 +12,8 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Add Item</a>
-            </li>
-            <li role="presentation"><a href="/logout">Logout</a>
-            </li>
+            <li role="presentation" class="active"><a href="#">Add Item</a></li>
+            <li role="presentation"><a href="/logout">Logout</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Python Flask App</h3>
@@ -23,9 +21,7 @@
       <section>
         <form class="form-horizontal" method="post" action="/addWish">
           <fieldset>
-            <!-- Form Name -->
             <legend>Create Your Wish</legend>
-            <!-- Text input-->
             <div class="form-group">
               <label class="col-md-4 control-label" for="txtTitle">Title</label>
               <div class="col-md-4">
@@ -33,7 +29,6 @@
               </div>
             </div>
 
-            <!-- Textarea -->
             <div class="form-group">
               <label class="col-md-4 control-label" for="txtPost">Post</label>
               <div class="col-md-4">
@@ -41,7 +36,6 @@
               </div>
             </div>
 
-            <!-- Button -->
             <div class="form-group">
               <label class="col-md-4 control-label" for="singlebutton"></label>
               <div class="col-md-4">
