--- a/html_form/templates/index.html
+++ b/html_form/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Python Flask Bucket List App</title>
-      <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-      <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <title>Python Flask Bucket List App</title>
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
   </head>
 
   <body>
@@ -11,12 +11,9 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a>
-            </li>
-            <li role="presentation"><a href="showSignin">Sign In</a>
-            </li>
-            <li role="presentation"><a href="showSignUp">Sign Up</a>
-            </li>
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="showSignIn">Sign In</a></li>
+            <li role="presentation"><a href="showSignUp">Sign Up</a></li>
           </ul>
         </nav>
         <h3 class="text-muted">Python Flask App</h3>
@@ -26,7 +23,9 @@
         <h1>Bucket List App</h1>
         <p class="lead"></p>
         <p>
-          <a class="btn btn-lg btn-success" href="showSignUp" role="button">Sign up today</a>
+          <a class="btn btn-lg btn-success" href="/showSignUp" role="button">
+            Sign up today
+          </a>
         </p>
       </div>
 
@@ -52,7 +51,8 @@
           <h4>Bucket List</h4>
           <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
         </div>
-      </div>
+       </div>
+
       <footer class="footer">
         <p>&copy; MyStartUp 2016</p>
       </footer>
