--- a/html_form/templates/signup.html
+++ b/html_form/templates/signup.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <title>Python Flask Bucket List App</title>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/jumbotron-narrow.css">
+    <link rel="stylesheet" href="../static/css/form-style.css">
     <script src="../static/js/jquery-3.1.1.js"></script>
     <script src="../static/js/signUp.js"></script>
   </head>
@@ -13,8 +14,8 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" ><a href="/">Home</a></li>
-            <li role="presentation"><a href="showSignin">Sign In</a></li>
+            <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/showSignIn">Sign In</a></li>
             <li role="presentation" class="active"><a href="#">Sign Up</a></li>
           </ul>
         </nav>
@@ -23,21 +24,24 @@
 
       <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form class="form-signin" method="POST" id="signupForm">
+        <form class="forms" method="POST" id="signUpForm">
           <label for="inputName" class="sr-only">Name</label>
           <input type="name" name="inputName" id="inputName" class="form-control" placeholder="Name" required autofocus>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <span id="invEmail">
-            Sorry, but it seems like you've entered an invalid email address
-          </span>
-          <span id="existEmail">
-            Sorry, but it seems that this account already exists.
-          </span>
-          <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Password" required>
-          <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button" style="margin-top: 15px;">Sign up</button>
+          <label for="inputPassword" class="sr-only">Password</label>
+          <button id="btnSignUp" class="btn btn-lg btn-primary btn-block" type="button">Sign up</button>
         </form>
+        <span id="invEmail">
+          Sorry, but it seems like you've entered an invalid email address
+        </span>
+        <span id="existEmail">
+          Sorry, but it seems that this account already exists.
+        </span>
+        <span id="succSignUp">
+          Sign up successful. Please login using the sign in page.
+        </span>
       </div>
       <footer class="footer">
         <p>&copy; MyStartup 2016</p>
