--- a/html_form/templates/userHome.html
+++ b/html_form/templates/userHome.html
@@ -4,63 +4,31 @@
     <title>Python Flask Bucket List App</title>
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
     <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
-    <link href="../static/css/signup.css" rel="stylesheet">
     <script src="../static/js/jquery-3.1.1.js"></script>
-    <script>
-      $(function() {
-          $.ajax({
-              url: '/getWish',
-              type: 'GET',
-              success: function(res) {
-                  var div = $('<div>')
-                            .attr('class', 'list-group')
-                            .append($('<a>')
-                                .attr('class', 'list-group-item active')
-                                .append($('<h4>')
-                                    .attr('class', 'list-group-item-heading'),
-                                    $('<p>')
-                                    .attr('class', 'list-group-item-text')
-                                )
-                            );
-                  var wishObj = JSON.parse(res);
-                  var wish = '';
-                  $.each(wishObj, function(index, value) {
-                      wish = $(div).clone();
-                      $(wish).find('h4').text(value.Title);
-                      $(wish).find('p').text(value.Description);
-                      $('.jumbotron').append(wish);
-                  });
-                  console.log(res);
-              },
-              error: function(error) {
-                  console.log(error);
-              }
-          });
-      });
-    </script>
+    <script src="../static/js/userHome.js"></script>
   </head>
 
   <body>
-      <div class="container">
-          <div class="header">
-              <nav>
-                  <ul class="nav nav-pills pull-right">
-                      <li role="presentation" class="active">
-                        <a href="/logout">Logout</a>
-                      </li>
-                      <li role="presentation">
-                        <a href="/showAddWish">Add Wish</a>
-                      </li>
-                  </ul>
-              </nav>
-              <h3 class="text-muted">Python Flask App</h3>
-          </div>
-          <div class="jumbotron">
-              <h1>Welcome Home !!</h1>
-          </div>
-          <footer class="footer">
-              <p>&copy; MyStartup 2016</p>
-          </footer>
+    <div class="container">
+      <div class="header">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active">
+              <a href="/logout">Logout</a>
+            </li>
+            <li role="presentation">
+              <a href="/showAddWish">Add Wish</a>
+            </li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">Python Flask App</h3>
       </div>
+      <div class="jumbotron">
+          <h1>Welcome Home !!</h1>
+      </div>
+      <footer class="footer">
+          <p>&copy; MyStartup 2016</p>
+      </footer>
+    </div>
   </body>
 </html>
