--- a/html_form/templates/signin.html
+++ b/html_form/templates/signin.html
@@ -24,7 +24,7 @@
 
       <div class="jumbotron">
         <h1>Bucket List App</h1>
-        <form class="forms" method="POST" id="signinForm" action="/dummyroute">
+        <form class="forms" method="POST" id="signinForm">
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" name="inputEmail" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
